--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
 
     //preferenceScreen (Setting Screen)
     implementation 'androidx.preference:preference:1.1.1'
+
+    //biometric authentication
+    implementation "androidx.biometric:biometric:1.1.0"
 }
